[package]
name = "tapeworm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapeworm"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
chrono      = { version = "0.4", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
colored     = "2"
comfy-table = "7"
uuid        = { version = "1", features = ["v4"] }
dirs        = "5"
csv         = "1"
anyhow      = "1"
hostname    = "0.4"
reqwest     = { version = "0.12", features = ["blocking", "json"] }
